--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+        crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -55,8 +57,25 @@
     <h1>About me</h1>>
   </section>
 
-  <footer>
-    <!-- <svg src="img/icon.svg"></svg> -->
+  <footer id="footer">
+    <div id="footer-background">
+      <!-- Autofilled by footer.svg -->
+    </div>
+    <div id="footer-content">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p>hello@bencuan.me</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="mb-5 flex-center">
+            <i class="fab fa-github"></i>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
