Fix mobile footer formatting, add placeholder message in banner

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     <div id="banner-background" data-depth="0.4"></div>
     <div id="banner-name" data-depth="0.05">
       <h1>Hi, I'm Ben.</h1>
+      <h3>I'm a student software developer who hasn't finished his site yet.</h3>
+      <h3>Feel free to hang around though :)</h3>
     </div>
     <!-- <div id="links">
       Links here
