--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
   <nav class="navbar navbar-expand-lg fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText"
       aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon">test</span>
+      <i class="fas fa-chevron-down"></i>
+      Menu
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a id="home-link" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a id="home-link" class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
           <a id="about-link" class="nav-link" href="#about">About</a>
