Add experience and projects section outlines

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
           <a id="about-link" class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a id="work-link" class="nav-link" href="#">Work</a>
+          <a id="experience-link" class="nav-link" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a id="projects-link" class="nav-link" href="#projects">Projects</a>
         </li>
 
         <li class="nav-item">
@@ -57,14 +60,57 @@
       <h1>Hi, I'm Ben.</h1>
       <h3>I'm a student software developer who hasn't finished his site yet.</h3>
       <h3>Feel free to hang around though :)</h3>
+
+      <div class="row">
+        <div class="col sm-1 col-md-2 col-lg-3"></div>
+        <div class="col-sm-5 col-md-4 col-lg-3">
+          <!-- Github -->
+          <a class="github-ic" href="#contact">
+            <button type="button" class="btn btn-outline-light btn-lg">Contact Me!</button>
+          </a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <!--Linkedin -->
+          <button type="button" class="btn btn-outline-light btn-lg btn-disabled">Resume</button>
+        </div>
+
+        <div class="col sm-1 col-md-2 col-lg-3"></div>
+      </div>
     </div>
-    <!-- <div id="links">
-      Links here
-    </div> -->
   </section>
 
   <section id="about">
-    <h1>About me</h1>>
+    <div class="container">
+        <h1 class="underline">About Me</h1>
+        <p>Hi there! I'm a senior at Monta Vista High School who's interested in pursuing an education in cognitive science.
+          Aside from my formal education, I'm an avid web developer who enjoys designing sites and games- you can see some of
+          my projects below. I try to keep things as made-from-scratch as possible- it's more fun that way :)
+        </p>
+
+        <br>
+
+        <p>
+          I'm also frequently involved in local hackathons and coding events- I've been to 8, created award-winning projects at 4, and
+          am currently organizing <a href="https://launchhacks.tech">my own hackathon.</a> In my adventures, I've also cofounded
+          <a href="https://bananiumlabs.com">Bananium Labs</a>, a nonprofit that provides support to help fellow aspiring student developers
+          get started with their own projects.
+        </p>
+
+        <p>
+          Although my main focus is web development with HTML, CSS, JavaScript, and TypeScript, I've worked with C# (mostly with Unity)
+          and dabbled in some machine learning with Python (something I hope to focus on more during college). If I'm not coding, I like to
+          read science fiction novels, <a href="https://github.com/dbqeo/dotfiles">rice Linux</a>, and play golf.
+        </p>
+      </div>
+  </section>
+
+  <section id="experience">
+    <h1 class="underline">Experience</h1>
+  </section>
+
+  <section id="projects">
+    <h1 class="underline">Projects</h1>
   </section>
 
   <footer id="footer">
