--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="">
 
 <head>
+  <base href="/bencuan.me/">
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Ben Cuan</title>
@@ -164,7 +165,7 @@
 
   </footer>
 
-  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="/js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
@@ -173,12 +174,12 @@
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-  <script src="js/vendor/parallax.min.js"></script>
-  <script src="js/vendor/particles.min.js"></script>
-  <script src="js/vendor/jquery.waypoints.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/particles.config.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/vendor/parallax.min.js"></script>
+  <script src="/js/vendor/particles.min.js"></script>
+  <script src="/js/vendor/jquery.waypoints.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/particles.config.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
 
