--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Ben Cuan</title>
   <meta name="description" content="Hi there! I'm Ben Cuan, a high school student in the Bay Area pursuing an education in HCI and cognitive science.">
-  <meta name="keywords" content="Ben Cuan,Benjamin Cuan,Developer,Student">
+  <meta name="keywords" content="Ben Cuan,Benjamin Cuan,Developer,Student,dbqeo">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
   <!-- Place favicon.ico in the root directory -->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link href="https://fonts.googleapis.com/css?family=Pompiere|Rajdhani" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
@@ -24,6 +23,7 @@
 </head>
 
 <body>
+
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
@@ -74,8 +74,12 @@
 
         <div class="col-sm-6 col-md-4 col-lg-3">
           <!--Linkedin -->
-          <button type="button" class="btn btn-outline-light btn-lg btn-disabled">Resume</button>
+          <a href="./assets/resume-bencuan.pdf" target="_blank">
+            <button type="button" class="btn btn-outline-light btn-lg btn-disabled">Resume</button>
+          </a>
         </div>
+
+
 
         <div class="col sm-1 col-md-2 col-lg-3"></div>
       </div>
