--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="description" content="Hi there! I'm Ben Cuan, a high school student in the Bay Area pursuing an education in HCI and cognitive science.">
   <meta name="keywords" content="Ben Cuan,Benjamin Cuan,Developer,Student,dbqeo">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <link rel="manifest" href="site.webmanifest">
   <!-- Place favicon.ico in the root directory -->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+  crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Pompiere|Rajdhani" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
@@ -113,6 +113,12 @@
 
   <section id="experience">
     <h1 class="underline">Experience</h1>
+
+    <div class="container">
+      <img src="img/bananium.png"><br>
+      <img src="img/launchhacks.png"><br>
+      <img src="img/2tbs.png"><br>
+    </div>
   </section>
 
   <section id="projects">
