--- a/index.html
+++ b/index.html
@@ -123,7 +123,42 @@
 
   <section id="projects">
     <h1 class="underline">Projects</h1>
+
+      <!-- Work -->
+      <li><a href="#work">Work</a></li>
+
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+
+
   </section>
+
+  <div id="main">
+    <article id="work">
+      <h2 class="major">Work</h2>
+      <!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
+      <p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat
+        volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem
+        luctus
+        ultrices.</p>
+      <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc
+        rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
+        pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris
+        aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+    </article>
+  </div>
 
   <footer id="footer">
     <div id="footer-background">
@@ -188,6 +223,7 @@
   <script src="js/vendor/particles.min.js"></script>
   <script src="js/vendor/jquery.waypoints.min.js"></script>
   <script src="js/plugins.js"></script>
+  <script src="js/dimension.js"></script>
   <script src="js/particles.config.js"></script>
   <script src="js/main.js"></script>
 
