Add experience blimps

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
     <h1 class="underline">Experience</h1>
 
     <div class="container">
-      <img src="img/bananium.png"><br>
-      <img src="img/launchhacks.png"><br>
-      <img src="img/2tbs.png"><br>
+      <img src="img/blimp-bananium.svg"><br>
+      <img src="img/blimp-launchhacks.svg"><br>
+      <img src="img/blimp-2tbs.svg"><br>
     </div>
   </section>
 
