--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
   <script src="js/vendor/parallax.min.js"></script>
   <script src="js/vendor/particles.min.js"></script>
   <script src="js/vendor/jquery.waypoints.min.js"></script>
+  <script src="js/vendor/smoothscroll.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/dimension.js"></script>
   <script src="js/particles.config.js"></script>
