--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Hi there! I'm Ben Cuan, a high school student in the Bay Area pursuing an education in HCI and cognitive science.">
   <meta name="keywords" content="Ben Cuan,Benjamin Cuan,Developer,Student,dbqeo">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="google-site-verification" content="IQWrJqpm29vmYokUZhK2IAQjxeR57fULnoVIFTsRkMU" />
   <link rel="manifest" href="site.webmanifest">
   <!-- Place favicon.ico in the root directory -->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
