--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </li>
 
         <li class="nav-item">
-          <a id="contact-link" class="nav-link" href="#footer-content">Contact</a>
+          <a id="contact-link" class="nav-link" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
