Add links to experience

--- a/index.html
+++ b/index.html
@@ -118,9 +118,18 @@
     <h1 class="underline">Experience</h1>
 
     <div class="container">
-      <img src="img/blimp-bananium.svg"><br>
-      <img src="img/blimp-launchhacks.svg"><br>
-      <img src="img/blimp-2tbs.svg"><br>
+
+      <a href="https://bananiumlabs.com">
+        <img src="img/blimp-bananium.svg" class="blimp" alt="Bananium Labs"><br>
+      </a>
+
+      <a href="https://launchhacks.tech">
+        <img src="img/blimp-launchhacks.svg" class="blimp"alt="LaunchHacks"><br>
+      </a>
+
+      <a href="https://2tbs.bananiumlabs.com">
+        <img src="img/blimp-2tbs.svg" alt="2TBS" class="blimp"><br>
+      </a>
     </div>
   </section>
 
