--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
   <script src="js/vendor/particles.min.js"></script>
   <script src="js/vendor/jquery.waypoints.min.js"></script>
   <script src="js/vendor/smoothscroll.js"></script>
+  <script src="js/vendor/climate.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/dimension.js"></script>
   <script src="js/particles.config.js"></script>
