Add hot air balloons

--- a/index.html
+++ b/index.html
@@ -138,11 +138,32 @@
     <h1 class="underline">Projects</h1>
 
       <!-- Work -->
-      <li><a href="#work">Work</a></li>
+      <div class="container">
+        <a href="#climate">
+          <img src="img/balloon-climate.svg" alt="Climate.js" class="balloon"><br>
+        </a>
+        <a href="#climate">
+          <img src="img/balloon-atomblast.svg" alt="Climate.js" class="balloon"><br>
+        </a>
+        <a href="#climate">
+          <img src="img/balloon-aegis.svg" alt="Climate.js" class="balloon"><br>
+        </a>
+        <a href="#climate">
+          <img src="img/balloon-audisea.svg" alt="Climate.js" class="balloon"><br>
+        </a>
+        <a href="#climate">
+          <img src="img/balloon-carrotcane.svg" alt="Climate.js" class="balloon"><br>
+        </a>
+        <a href="#climate">
+          <img src="img/balloon-electrotab.svg" alt="Climate.js" class="balloon"><br>
+        </a>
+      </div>
     </section>
 
+
+      <!-- Work popups -->
       <div id="main">
-        <article id="work">
+        <article id="climate">
           <h2 class="major">Work</h2>
           <!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
           <p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat
