Add project information

--- a/index.html
+++ b/index.html
@@ -139,23 +139,27 @@
 
       <!-- Work -->
       <div class="container">
+
+        <!-- Balloons inspired by an icon by Vectors Market from Flaticon https://www.flaticon.com/authors/vectors-market.
+          Licensed by Creative Commons 3.0 - http://creativecommons.org/licenses/by/3.0/ -->
+
         <a href="#climate">
           <img src="img/balloon-climate.svg" alt="Climate.js" class="balloon"><br>
         </a>
-        <a href="#climate">
-          <img src="img/balloon-atomblast.svg" alt="Climate.js" class="balloon"><br>
+        <a href="#atomblast">
+          <img src="img/balloon-atomblast.svg" alt="AtomBlast" class="balloon"><br>
         </a>
-        <a href="#climate">
-          <img src="img/balloon-aegis.svg" alt="Climate.js" class="balloon"><br>
+        <a href="#aegis">
+          <img src="img/balloon-aegis.svg" alt="AegisVR" class="balloon"><br>
         </a>
-        <a href="#climate">
-          <img src="img/balloon-audisea.svg" alt="Climate.js" class="balloon"><br>
+        <a href="#audisea">
+          <img src="img/balloon-audisea.svg" alt="AudiSea" class="balloon"><br>
         </a>
-        <a href="#climate">
-          <img src="img/balloon-carrotcane.svg" alt="Climate.js" class="balloon"><br>
+        <a href="#carrotcane">
+          <img src="img/balloon-carrotcane.svg" alt="CarrotCane" class="balloon"><br>
         </a>
-        <a href="#climate">
-          <img src="img/balloon-electrotab.svg" alt="Climate.js" class="balloon"><br>
+        <a href="#electrotab">
+          <img src="img/balloon-electrotab.svg" alt="ElectroTab" class="balloon"><br>
         </a>
       </div>
     </section>
@@ -164,16 +168,101 @@
       <!-- Work popups -->
       <div id="main">
         <article id="climate">
-          <h2 class="major">Work</h2>
-          <!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
-          <p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat
-            volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem
-            luctus
-            ultrices.</p>
-          <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc
-            rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
-            pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris
-            aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+          <h2 class="major">Climate.js</h2>
+          <p>Climate.js takes raw weather data and offers a variety of customizable color schemes and visualizers to reflect the
+          current weather. Add extra flair to location-based webapps, or perhaps give a homey feel with weather from your
+          hometown- anything to help make your site more responsive :)</p>
+          <br>
+          <ul class="icons">
+            <li>
+              <a href="https://github.com/dbqeo/climate.js" class="icon fab fa-github"></a>
+            </li>
+            <li>
+              <a href="https://www.npmjs.com/package/climate.js" class="icon fab fa-node-js"></a>
+            </li>
+          </ul>
+        </article>
+        <article id="atomblast">
+          <h2 class="major">AtomBlast</h2>
+          <p>AtomBlast is an online multiplayer arena game set at the atomic level. You control your own atom and fight with your
+          team against other players to gain the most points. Collect atoms to craft into compounds with the click of a button-
+          each compound has unique qualities that can help you attack, defend, and gain buffs! Strategically minded maps,
+          weaponry, team play, and game modes only add to the fuel!</p>
+          <p>AtomBlast is a project created in collaboration with <a href="https://bananiumlabs.com">BananiumLabs.</a></p>
+          <br>
+          <ul class="icons">
+            <li>
+              <a href="https://github.com/BananiumLabs/AtomBlastPublicIssues" class="icon fab fa-github"></a>
+            </li>
+          </ul>
+        </article>
+        <article id="aegis">
+          <h2 class="major">AegisVR</h2>
+          <p>Aegis is an interactive virtual reality self-defense simulation, focused on educating its users on how to deal with
+          dangerous situations involving another person. We wanted to spread awareness about self defense and educate people on
+          techniques so they would have a better chance of escape should they ever end up in such a situation. In the future,
+          we'd like to add more scenarios and refine the animations to give a smoother learning experience.</p>
+          <p>Aegis was created as a part of BaseHacks 3.</a></p>
+          <br>
+          <ul class="icons">
+            <li>
+              <a href="https://bananiumlabs.github.io/AegisVR/" class="icon fas fa-globe"></a>
+            </li>
+            <li>
+              <a href="https://basehacks.hackerearth.com/sprints/basehacks-30/dashboard/9cbe285/submission/" class="icon fas fa-bullhorn"></a>
+            </li>
+            <li>
+              <a href="https://github.com/BananiumLabs/AtomBlastPublicIssues" class="icon fab fa-github"></a>
+            </li>
+          </ul>
+        </article>
+        <article id="audisea">
+          <h2 class="major">AudiSea</h2>
+          <p>AudiSea is an ocean whose waves sync up to the beats of whatever music is playing, letting the user sea the music
+          they're listening to. It also has fish and dolphins that appear periodically in sync with the music. We also added
+          voice recognition to allow the user to play their music hands-free by integrating our app with Spotify.</p>
+          <p>AudiSea was awarded 4th Place Overall at MenloHacks III.</p>
+          <br>
+          <ul class="icons">
+            <li>
+              <a href="https://dbqeo.github.io/AudiSea/" class="icon fas fa-globe"></a>
+            </li>
+            <li>
+              <a href="https://devpost.com/software/audisea" class="icon fas fa-bullhorn"></a>
+            </li>
+            <li>
+              <a href="https://github.com/BananiumLabs/AudiSea" class="icon fab fa-github"></a>
+            </li>
+          </ul>
+        </article>
+        <article id="carrotcane">
+          <h2 class="major">CarrotCane</h2>
+          <p>CarrotCane is a DIY cane attachment to assist the blind and visually impaired. Features include:
+          automatic detection of nearby objects with audible alarm and feedback when approaching too quickly,
+          ability to attach a smartphone to provide live GPS tracking and video feed, and
+          online supervisor console to give voice directions and monitor video feed for the caneholder.</p>
+          <p>Awarded 1st Place Overall at TinoHacks II, April 21-22 2018</p>
+          <br>
+          <ul class="icons">
+            <li>
+              <a href="https://devpost.com/software/carrotcane" class="icon fas fa-bullhorn"></a>
+            </li>
+            <li>
+              <a href="https://github.com/BananiumLabs/CarrotCane" class="icon fab fa-github"></a>
+            </li>
+          </ul>
+        </article>
+        <article id="electrotab">
+          <h2 class="major">ElectroTab</h2>
+          <p>The ultimate modular New Tab Page! Create your own widgets and rearrange them however you wish. All configuration
+          settings are saved by account- login using your email, Google, or Github. Change the themes, color, and more!</p>
+          <p>ElectroTab is a project created in collaboration with <a href="https://bananiumlabs.com">BananiumLabs.</a></p>
+          <br>
+          <ul class="icons">
+            <li>
+              <a href="https://github.com/BananiumLabs/ElectroTab" class="icon fab fa-github"></a>
+            </li>
+          </ul>
         </article>
       </div>
 
