Make buttons less janky

--- a/index.html
+++ b/index.html
@@ -30,45 +30,47 @@
       Click here to launch content
     </button>
 
-    <div class="row">
-      <div class="col-12">
-        <img src="img/profile.png">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <img src="img/profile.png">
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-3">
+      <div class="row">
         <button id="github-button" class="expand-button">
           <i class="fab fa-github fa-2x"></i>
           <span class="expand-button-content hidden">
             GitHub
           </span>
         </button>
-      </div>
-      <div class="col-3">
+
+
         <button id="linkedin-button" class="expand-button">
           <i class="fab fa-linkedin fa-2x"></i>
           <span class="expand-button-content hidden">
             LinkedIn
           </span>
         </button>
-      </div>
-      <div class="col-3">
+
         <button id="email-button" class="expand-button">
           <i class="fas fa-envelope fa-2x"></i>
           <span class="expand-button-content hidden">
             Email
           </span>
         </button>
-      </div>
-      <div class="col-3">
+
         <button id="resume-button" class="expand-button">
           <i class="fas fa-file-alt fa-2x"></i>
           <span class="expand-button-content hidden">
             Resume
           </span>
         </button>
+
       </div>
+
     </div>
+
 
 
 
