--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <img src="img/profile.png">
         </div>
       </div>
-      <div class="row center">
+      <div class="row center no-select">
         <button id="github-button" class="expand-button">
           <i class="fab fa-github fa-2x"></i>
           <span class="expand-button-content hidden">
