--- a/index.html
+++ b/index.html
@@ -24,20 +24,25 @@
 <body>
 
   <div id="landing">
-    <p>Hello world! This is HTML5 Boilerplate.</p>
 
-    <button id="launch-content-button">
+    <!-- <button id="launch-content-button">
       Click here to launch content
-    </button>
+    </button> -->
 
 
     <div class="container">
       <div class="row">
-        <div class="col-12">
-          <img src="img/profile.png">
+
+
+        <!-- Logo & Loading Animation. See css -->
+        <div class="col-12 center">
+          <div class="grey-fill">
+            <div class="splash-image">
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row center no-select">
+      <div class="row center no-select button-row">
         <button id="github-button" class="expand-button">
           <i class="fab fa-github fa-2x"></i>
           <span class="expand-button-content hidden">
@@ -70,10 +75,6 @@
       </div>
 
     </div>
-
-
-
-
 
 
   </div>
