Center splash image

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
         <!-- Logo & Loading Animation. See css -->
         <div class="col-12 center">
-          <div class="grey-fill">
-            <div class="splash-image">
+          <div class="grey-fill center">
+            <div class="splash-image center">
             </div>
           </div>
         </div>
