--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
 
 
     <div class="container">
+      <!-- Logo & Loading Animation. See css -->
       <div class="row">
-
-
-        <!-- Logo & Loading Animation. See css -->
         <div class="col-12 center">
           <div class="grey-fill center">
             <div class="splash-image center">
@@ -42,6 +40,16 @@
           </div>
         </div>
       </div>
+
+      <div class="row center">
+        <div class="loading">
+          LOADING . . .
+        </div>
+        <div class="name">
+          name
+        </div>
+      </div>
+
       <div class="row center no-select button-row">
         <button id="github-button" class="expand-button">
           <i class="fab fa-github fa-2x"></i>
@@ -49,7 +57,6 @@
             GitHub
           </span>
         </button>
-
 
         <button id="linkedin-button" class="expand-button">
           <i class="fab fa-linkedin fa-2x"></i>
@@ -71,9 +78,12 @@
             Resume
           </span>
         </button>
-
       </div>
+    </div>
 
+
+    <div class="row center anchor-bottom">
+      <button id="launch-button">Launch Site</button>
     </div>
 
 
