--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- ---------------------------
+   https://bencuan.me
+   © 2019 Ben Cuan - MIT License
+   Created Summer 2019
+------------------------------- -->
+
 <!doctype html>
 <html class="no-js" lang="">
 
