Disable launch, fix formatting

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           LOADING . . .
         </div>
         <div class="name">
-          name
+          Ben Cuan
         </div>
       </div>
 
@@ -85,12 +85,14 @@
           </span>
         </button>
       </div>
+
+        <div class="row center">
+          <button id="launch-button">Site Under Construction - Coming August 2019!</button>
+        </div>
     </div>
 
 
-    <div class="row center anchor-bottom">
-      <button id="launch-button">Launch Site</button>
-    </div>
+
 
 
   </div>
