Fix title, mobile layout

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>Ben Cuan</title>
+  <meta name="description" content="Portfolio Site - Ben Cuan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
@@ -86,14 +86,11 @@
         </button>
       </div>
 
-        <div class="row center">
-          <button id="launch-button">Site Under Construction - Coming August 2019!</button>
-        </div>
     </div>
 
-
-
-
+    <div class="row center anchor-bottom">
+      <button id="launch-button">Launch Site</button>
+    </div>
 
   </div>
 
