--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
 
     </div>
 
-    <div class="row center anchor-bottom">
+    <div class="row center anchor-bottom" id="launch-button-container">
       <button id="launch-button">Launch Site</button>
     </div>
 
+    <div id="launch-button-rope" class="center"></div>
   </div>
 
   <div id="content">
