--- a/index.html
+++ b/index.html
@@ -38,10 +38,15 @@
       <a id="skip-button">Skip</a>
     </div>
     <div id="welcome-page-text" class="container">
-      <div id="int-text-1" class="glitch loading-intercepted-text typewriter" data-text="LOADING INTERCEPTED...">LOADING INTERCEPTED...</div>
-      <div id="int-text-2" class="glitch loading-intercepted-text typewriter" data-text="By your friendly neighborhood PandaBot! Hi! ʕ•ᴥ•ʔ">By your friendly neighborhood PandaBot! Hi! ʕ•ᴥ•ʔ</div>
-      <div id="int-text-3" class="glitch loading-intercepted-text typewriter" data-text="Just wanted to get your opinion on this:">Just wanted to get your opinion on this:</div>
-      <div id="int-text-4" class="glitch loading-intercepted-text typewriter" data-text="What is your favorite animal?">What is your favorite animal?</div>
+      <div id="int-text-1" class="glitch loading-intercepted-text typewriter" data-text="LOADING INTERCEPTED...">LOADING
+        INTERCEPTED...</div>
+      <div id="int-text-2" class="glitch loading-intercepted-text typewriter"
+        data-text="By your friendly neighborhood PandaBot! Hi! ʕ•ᴥ•ʔ">By your friendly neighborhood PandaBot! Hi! ʕ•ᴥ•ʔ
+      </div>
+      <div id="int-text-3" class="glitch loading-intercepted-text typewriter"
+        data-text="Just wanted to get your opinion on this:">Just wanted to get your opinion on this:</div>
+      <div id="int-text-4" class="loading-intercepted-text typewriter" data-text="What is your favorite animal?">What is
+        your favorite animal?</div>
     </div>
     <div class="container">
       <div class="row" id="welcome-choice">
@@ -49,14 +54,26 @@
           <div class="welcome-box center" id="welcome-box-pixel">
             <!-- Logo & Loading Animation. See css -->
 
-            <div class="grey-fill center">
+            <div class="grey-fill grey-fill-pixel center">
               <div class="splash-image-pixel center">
               </div>
             </div>
+            <div class="welcome-box-label center">Panda</div>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-2 welcome-choice-or">
           -OR-
+        </div>
+        <div class="col-5">
+          <div class="welcome-box center" id="welcome-box-art">
+            <!-- Logo & Loading Animation. See css -->
+
+            <div class="grey-fill grey-fill-art center">
+              <div class="splash-image-art center">
+              </div>
+            </div>
+            <div class="welcome-box-label center">Panda</div>
+          </div>
         </div>
       </div>
     </div>
@@ -72,10 +89,8 @@
     <div class="container">
       <!-- Logo & Loading Animation. See css -->
       <div class="row">
-        <div class="col-12 center">
-          <div class="grey-fill center">
-            <div class="splash-image center">
-            </div>
+        <div class="col-12 center" id="logo">
+          <div class="grey-fill grey-fill-pixel center">
           </div>
         </div>
       </div>
