Start content squares

--- a/index.html
+++ b/index.html
@@ -147,17 +147,21 @@
     <div class="row">
       <div class="col-6 content-square" id="about-square">
         <div class="nohover-overlay"></div>
+        <div class="content-label-top center">About</div>
       </div>
-      <div class="col-6 content-square" id="art-square">
+      <div class="col-6 content-square" id="code-square">
         <div class="nohover-overlay"></div>
+        <div class="content-label-bottom center">Software + Games</div>
       </div>
     </div>
     <div class="row">
-      <div class="col-6 content-square" id="code-square">
-        <div class="nohover-overlay"></div>
-      </div>
       <div class="col-6 content-square" id="org-square">
         <div class="nohover-overlay"></div>
+        <div class="content-label-bottom center">Organizations</div>
+      </div>
+      <div class="col-6 content-square" id="art-square">
+        <div class="nohover-overlay"></div>
+        <div class="content-label-top center">Art + Design</div>
       </div>
     </div>
 
@@ -166,6 +170,14 @@
         <i class="fas fa-arrow-left fa-2x"></i>
         <span class="expand-button-content hidden">
           Back
+        </span>
+      </button>
+    </div>
+    <div id="close-button-container">
+      <button id="close-button" class="expand-button">
+        <i class="fas fa-times fa-2x"></i>
+        <span class="expand-button-content hidden">
+          Close
         </span>
       </button>
     </div>
